--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "moment": "^2.30.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "dev": "cross-env NODE_ENV=development node server.js",
+    "start": "cross-env NODE_ENV=production node server.js"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
