--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "moment": "^2.30.1"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "devDependencies": {
