--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "type": "module",
   "dependencies": {
-    "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "moment": "^2.30.1"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "node server.js"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7"
   }
 }
